@@ -499,6 +499,11 @@ for further details.
 The system-wide chroot definition file.  This file must be owned by the root
 user, and not be writable by other.
 .TP
+\f[BI]@SCHROOT_CONF_CHROOT_D@\fP
+Additional chroot definitions may be placed in files under this directory.
+They are treated in exactly that same manner as \fI@SCHROOT_CONF@\fP.  Each
+file may contain one or more chroot definitions.
+.TP
 \f[BI]@SCHROOT_CONF_SETUP_D@\fP
 .TP
 \f[BI]@SCHROOT_CONF_EXEC_D@\fP
